# LevelUpGame2023

./: .gitignore  .gitmodules  CMakeLists.txt  include GLfreeglut.txt
Game/: .qmake.stash  BaseMenu.cpp  BaseMenu.h  CMakeLists.txt  Game.cpp  Game.h  Game.pro  MainMenu.cpp  MainMenu.h  README.md  Readme.MD  Visualizer.cpp  Visualizer.h  main.cpp
Game/App/: main.cpp
Game/Resources/Shader/: Sprite.frag.glsl  Sprite.vert.glsl
Game/build-tests-Desktop-Debug/: tests
Game/configs/: settings.ini
Game/include/: Coin.hpp  ContactListener.hpp  Entity.hpp  EntityBlock.hpp  EntityCoin.hpp  EntityGround.hpp  EntityMushroom.hpp  EntityPipe.hpp  EntityStar.hpp  EventSystem.hpp  GAME_STATES.hpp  Game.h  Game.hpp  GameState.hpp  GlobalSettings.hpp  Global_settings.h  IEntity.hpp  IEventHandler.hpp  IMenu.hpp  IPlayer.hpp  IPlayerVisualizer.hpp  ISettings.hpp  Input.hpp  KeyManager.hpp  Level.hpp  MainMenu.hpp  Map.hpp  MapParser.hpp  MapStub.hpp  MapTypes.hpp  Menu.hpp  MenuStub.hpp  Player.hpp  PlayerStub.hpp  Score.hpp  Settings.hpp  Shader.hpp  Sprite.hpp  SpriteRenderer.hpp  Texture.hpp  (+4 more)
Game/include/Entity/: Entity.hpp  EntityBlock.hpp  EntityCoin.hpp  EntityCoinBlock.hpp  EntityGround.hpp  EntityMario.hpp  EntityMushroom.hpp  EntityPipe.hpp  EntityStar.hpp  EntityStepBlock.hpp  IEntity.hpp
Game/include/Graphics/: Render.hpp  Shader.hpp
Game/include/Menu/: Animator.hpp  AssetManager.hpp  GameMenu.hpp  MainMenu.hpp  Menu.hpp  MenuHandler.hpp
Game/include/interface/: IEntity.hpp  IEventHandler.hpp  ILevel.hpp  IMap.hpp  IMenu.hpp  IPlayer.hpp  IProcessInput.hpp  ITexture.hpp  IVizMap.hpp  IVizMenu.hpp  IVizPlayer.hpp  IVizScore.hpp  Player_state.hpp  Point.h
Game/libs/STBI/: stb_easy_font.h
Game/src/: Coin.cpp  ContactListener.cpp  Entity.cpp  EntityBlock.cpp  EntityCoin.cpp  EntityGround.cpp  EntityMario.cpp  EntityMushroom.cpp  EntityPipe.cpp  EntityStar.cpp  EventSystem.cpp  Game.cpp  GameState.cpp  Input.cpp  KeyManager.cpp  Level.cpp  LoggerTest.cpp  MainMenu.cpp  Map.cpp  MapParser.cpp  Menu.cpp  Player.cpp  Score.cpp  Settings.cpp  Shader.cpp  Sprite.cpp  SpriteRenderer.cpp  Texture.cpp  View.cpp  Visualizer.cpp
Game/src/Entity/: Entity.cpp  EntityBlock.cpp  EntityCoin.cpp  EntityCoinBlock.cpp  EntityGround.cpp  EntityMario.cpp  EntityMushroom.cpp  EntityPipe.cpp  EntityStar.cpp  EntityStepBlock.cpp
Game/src/Graphics/: Render.cpp  Shader.cpp
Game/src/Menu/: Animator.cpp  AssetManager.cpp  GameMenu.cpp  MainMenu.cpp  Menu.cpp  MenuHandler.cpp
Game/tests/: CMakeLists.txt  SettingsTests.cpp  tests.pro
Game/tests/src/: Entity_test.cpp  Game_test.cpp  IEntity_test.cpp
lib/STBI/: stbi_image.h
